--- a/No.1.5.2.html
+++ b/No.1.5.2.html
@@ -177,7 +177,11 @@
                 <li>
                   <h1 class="h1fixed"></h1>
                   <p>
-                    En el contexto de las ciudades digitales, la multimedia se ha convertido en un componente esencial para la interacción, comunicación y gestión urbana. La integración de texto, imágenes, audio, video, animación y realidad aumentada en plataformas digitales está transformando la forma en que los ciudadanos, gobiernos y empresas interactúan con el entorno urbano. Este ensayo explora las diversas aplicaciones de la multimedia en las ciudades inteligentes, analizando su impacto en la prestación de servicios públicos, la participación ciudadana, el turismo, la educación y la gestión urbana.                    <br>
+                    En el contexto de las ciudades digitales, la multimedia se ha convertido en un componente esencial para la interacción, 
+                    comunicación y gestión urbana. La integración de texto, imágenes, audio, video, animación y realidad aumentada en plataformas 
+                    digitales está transformando la forma en que los ciudadanos, gobiernos y empresas interactúan con el entorno urbano. 
+                    Este ensayo explora las diversas aplicaciones de la multimedia en las ciudades inteligentes, analizando su impacto en 
+                    la prestación de servicios públicos, la participación ciudadana, el turismo, la educación y la gestión urbana.
                     <br>
                    <p> 
                     <h4>1. Multimedia en la Gestión y Servicios Urbanos </h4>
@@ -237,8 +241,6 @@ Caso de estudio: El Centro de Operaciones de Río de Janeiro (COR) utiliza panta
                    <p><img class="imagen-zigzag" src="images/aplicacionvirtual4.jpg" alt="" width="340" height="250"></p>
                 </div>
                 <div class="col-md-6">
-                <br>
-                 
                   <p>
                    <h5> 2.2 Educación y Concientización </h5>
                     
