--- a/No.1.5.2.html
+++ b/No.1.5.2.html
@@ -336,8 +336,9 @@ Caso de estudio: El Centro de Operaciones de Río de Janeiro (COR) utiliza panta
             <div class="snackbars" id="form-output-global"></div>
             <script src="js/core.min.js"></script>
             <script src="js/script.js"></script>
-
-</body>
+        </section>
+    </div>
+  </body>
   <style>
      /*Derechos de autos*/
     .footer {
