--- a/No.2.1.1.html
+++ b/No.2.1.1.html
@@ -175,14 +175,15 @@
                 <div class="col-xl-8">
 
                     <ul class="list-xl">
-                        <li>
-                            <h1 class="h1fixed"></h1>
-                        </li>
+        
                         <li>
                             <p>
 
-                                En la era digital, los lenguajes de programación multimedia se han convertido en herramientas fundamentales para el desarrollo de aplicaciones interactivas, videojuegos, animaciones, realidad virtual y otros contenidos digitales. Estos lenguajes permiten integrar diferentes tipos de medios, como texto, imágenes, audio y video, en un solo entorno interactivo. Este ensayo explora los principales lenguajes de programación utilizados en multimedia, sus características, ventajas y aplicaciones en la industria tecnológica actual.
-
+                                En la era digital, los lenguajes de programación multimedia se han convertido en herramientas 
+                              fundamentales para el desarrollo de aplicaciones interactivas, videojuegos, animaciones, realidad 
+                              virtual y otros contenidos digitales. Estos lenguajes permiten integrar diferentes tipos de medios, 
+                              como texto, imágenes, audio y video, en un solo entorno interactivo. Este ensayo explora los principales 
+                              lenguajes de programación utilizados en multimedia, sus características, ventajas y aplicaciones en la industria tecnológica actual.
 
                             </p>
                         </li>
@@ -223,23 +224,17 @@
                                 <br>
                                 <strong>• Multiplataforma: </strong>Compatibilidad con diferentes sistemas operativos y dispositivos.
                                 <br>
-
-                            </p>
-                            <br>
-                            <br>
-                            <p>
+                            </p>                                                    
                                 <h4>2. Lenguajes de programacion mas utilizados en Multimedia.</h4>
                                 <br><br>
+                              <p>
 
                                 <h5>a) JavaScript (con HTML5 y CSS3)</h5>
                                 <strong>Aplicaciones: </strong>Desarrollo web interactivo, juegos en navegador, animaciones con Canvas y WebGL.
                                 <br>
                                 <strong>Ventajas: </strong>Amplia adopción, gran cantidad de librerías (como Three.js para 3D) y frameworks (React, Angular).
                                 <br>
-                                <strong>Ejemplo: </strong>Plataformas como YouTube y Netflix utilizan JavaScript para su interfaz multimedia.
-                                <br>
-                                <br>
-
+                                <strong>Ejemplo: </strong>Plataformas como YouTube y Netflix utilizan JavaScript para su interfaz multimedia.                                
 
                             </p>
                         </div>
