--- a/No.2.1.2.html
+++ b/No.2.1.2.html
@@ -175,21 +175,19 @@
                         <li>
                             <h1 class="h1fixed"></h1>
                             <p>
-                                Los lenguajes de programación multimedia son fundamentales en la creación de aplicaciones interactivas, videojuegos, animaciones y experiencias audiovisuales. A diferencia de los lenguajes de programación tradicionales, estos están diseñados con características específicas que facilitan el manejo de gráficos, sonido, video y entradas del usuario. Este ensayo explora las principales características que definen el desarrollo en lenguajes de programación multimedia, analizando su impacto en la eficiencia, rendimiento y creatividad en el ámbito digital.
-                                <br><br>
+                                Los lenguajes de programación multimedia son fundamentales en la creación de aplicaciones interactivas, videojuegos, 
+                              animaciones y experiencias audiovisuales. A diferencia de los lenguajes de programación tradicionales, estos están 
+                              diseñados con características específicas que facilitan el manejo de gráficos, sonido, video y entradas del usuario. 
+                              Este ensayo explora las principales características que definen el desarrollo en lenguajes de programación multimedia, 
+                              analizando su impacto en la eficiencia, rendimiento y creatividad en el ámbito digital.</p>
+                                <br>
                                 <h5>
                                     1. Soporte para Gráficos y Animación
                                 </h5>
-                                <br>
-                                Una de las características más importantes de los lenguajes multimedia es su capacidad para manejar gráficos 2D y 3D, así como animaciones complejas.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-
-
-                            </p>
+                              <p>
+                                Una de las características más importantes de los lenguajes multimedia es 
+                              su capacidad para manejar gráficos 2D y 3D, así como animaciones complejas.
+                            </p>                                                
                         </li>
                     </ul>
                 </div>
@@ -202,8 +200,7 @@
                 <div class="col-lg-5 col-xl-10">
 
                     <div class="row row-30">
-                        <div class="col-md-6">
-                            <br>
+                        <div class="col-md-6">                            
                             <p><img class="imagen-zoom-rotar" src="images/drive-download-20250414T215442Z-001/definicion-tecnologia-multimedia.png.webp" alt="" width="340" height="250" /></p>
                             <br>
                             <br>
@@ -229,11 +226,8 @@
                                 <strong>Animación por fotogramas y interpolación:</strong>
                                 <br>
                                 Sistemas como Unity (C#) y Unreal Engine (C++) incluyen herramientas de animación basadas en esqueletos (rigging) y keyframes.
-
-
                             </p>
-                            <br>
-                            <br>
+                            <br>                            
                             <p>
                                 <strong>2. Manejo de Audio y Video</strong>
                                 <br>
@@ -250,9 +244,6 @@
                                 Python con OpenCV se usa para análisis de video en tiempo real.
                                 <br>
                                 C++ en aplicaciones como VLC Media Player maneja decodificación eficiente.
-
-
-
                             </p>
                         </div>
                     </div>
