--- a/No.2.1.3.html
+++ b/No.2.1.3.html
@@ -182,7 +182,12 @@
                         <li>
                             <h1 class="h1fixed"></h1>
                             <p>
-                                En el mundo actual, dominado por contenidos interactivos y experiencias digitales inmersivas, las plataformas y herramientas de programación multimedia se han convertido en elementos fundamentales para desarrolladores, diseñadores y creadores de contenido. Estas soluciones tecnológicas permiten integrar diversos medios como gráficos, audio, video y elementos interactivos en aplicaciones que van desde videojuegos hasta experiencias educativas. Este ensayo explora las principales plataformas y herramientas utilizadas en programación multimedia, analizando sus características, ventajas comparativas y aplicaciones en distintos ámbitos del desarrollo digital.
+                                En el mundo actual, dominado por contenidos interactivos y experiencias digitales inmersivas, 
+                              las plataformas y herramientas de programación multimedia se han convertido en elementos fundamentales
+                              para desarrolladores, diseñadores y creadores de contenido. Estas soluciones tecnológicas permiten integrar
+                              diversos medios como gráficos, audio, video y elementos interactivos en aplicaciones que van desde videojuegos
+                              hasta experiencias educativas. Este ensayo explora las principales plataformas y herramientas utilizadas en 
+                              programación multimedia, analizando sus características, ventajas comparativas y aplicaciones en distintos ámbitos del desarrollo digital.
                                 <br><br>
                             <p>
                                 <h4>1. Clasificación de Plataformas Multimedia</h4>
@@ -213,14 +218,7 @@
                                 <stron>Pure Data: </stron>Para creación de música interactiva y arte sonoro
                                 <br>
                                 <stron>TouchDesigner: </stron>Plataforma nodal para instalaciones multimedia
-
-
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-                            </p>
+                            </p>                      
                         </li>
                     </ul>
                 </div>
