--- a/No.2.2.4.html
+++ b/No.2.2.4.html
@@ -183,11 +183,15 @@
                         <li>
                             <h1 class="h1fixed"></h1>
                             <p>
-                                En el ámbito de la ingeniería del software, el entorno de desarrollo constituye la base sobre la cual se construyen, prueban y mantienen las aplicaciones. Este entorno abarca un conjunto de herramientas y configuraciones que facilitan la creación de software de alta calidad. Este ensayo explora la definición, componentes, tipos y la importancia del entorno de desarrollo en el ciclo de vida del software.
-                                <br><br>
-                            <p>
+                                En el ámbito de la ingeniería del software, el entorno de desarrollo constituye
+                              la base sobre la cual se construyen, prueban y mantienen las aplicaciones. Este entorno
+                              abarca un conjunto de herramientas y configuraciones que facilitan la creación de software 
+                              de alta calidad. Este ensayo explora la definición, componentes, tipos y la importancia del
+                              entorno de desarrollo en el ciclo de vida del software.
+                            </p>
+                                                          
                                 <h4>Definición y Componentes del Entorno de Desarrollo</h4>
-                                <br>
+                                <p>
                                 Un entorno de desarrollo es un espacio configurado que proporciona a los desarrolladores las herramientas necesarias para escribir, probar y depurar código. Este entorno puede incluir:
                                 <br><br>
                                 <h5>Editores de código: </h5>Herramientas que permiten escribir y modificar el código fuente.
@@ -200,14 +204,7 @@
                                     <h5>Sistemas de control de versiones: </h5>Herramientas que gestionan los cambios en el código a lo largo del tiempo.
                                     <br><br>
                                     <h5>Entornos de ejecución: </h5>Plataformas donde se ejecuta el software desarrollado.
-
-
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-                            </p>
+                            </p>                   
                         </li>
                     </ul>
                 </div>
@@ -232,8 +229,7 @@
                             <p><img class="imagen-zigzag" src="images/drive-download-20250414T215442Z-001/softwarealamedida4.png" alt="" width="340" height="250"></p>
                         </div>
                         <div class="col-md-6">
-                            <br>
-                            <br>
+                            
 
                             <p>
                                 Estos componentes trabajan en conjunto para proporcionar un flujo de trabajo eficiente y organizado para los desarrolladores.
