--- a/No.2.2.4.html
+++ b/No.2.2.4.html
@@ -188,10 +188,11 @@
                               abarca un conjunto de herramientas y configuraciones que facilitan la creación de software 
                               de alta calidad. Este ensayo explora la definición, componentes, tipos y la importancia del
                               entorno de desarrollo en el ciclo de vida del software.
-                            </p><br>                                                        
+                            </p><br><br>                                                        
                                 <h4>Definición y Componentes del Entorno de Desarrollo</h4>
                                 <p>
-                                Un entorno de desarrollo es un espacio configurado que proporciona a los desarrolladores las herramientas necesarias para escribir, probar y depurar código. Este entorno puede incluir:
+                                Un entorno de desarrollo es un espacio configurado que proporciona a los desarrolladores las
+                                herramientas necesarias para escribir, probar y depurar código. Este entorno puede incluir:</p>
                                 <br><br>
                                 <h5>Editores de código: </h5>Herramientas que permiten escribir y modificar el código fuente.
                                 <br><br>
