--- a/No.3.1.html
+++ b/No.3.1.html
@@ -346,7 +346,7 @@ transform-style: preserve-3d;}
         color: white; /* Texto en color blanco */
         padding: 15px;
         text-align: center;
-        font-size: 1opx;
+        font-size: 10px;
         border-radius: 10px; /* Bordes redondeados */
         margin: 20px; /* Separación del contenido */
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
