--- a/noticias.html
+++ b/noticias.html
@@ -146,10 +146,10 @@
         <h2>Ultimas noticias c</h2>
         <div class="noticias-container">
             <article class="noticia">
-                <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
-                <h3>Titulo de noticia 1 </h3>
+                <img src="Expoisisa.jpg" alt="Noticia 1">
+                <h3>Expo ISISA UPIICSA 2025 </h3>
                 <p>
-                    Breve descripcion de la noticia 1. 
+🎉 ¡Queda oficialmente inaugurada la Expo ISISA UPIICSA 2025! 🎉
                 </p>
                 <a href="#">Leer mas</a>
             </article>
