--- a/noticias.html
+++ b/noticias.html
@@ -151,7 +151,7 @@
                 <p>
 🎉 ¡Queda oficialmente inaugurada la Expo ISISA UPIICSA 2025! 🎉
                 </p>
-                <a href="#">Leer mas</a>
+                <a href="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fupiicsa.ipn.oficial%2Fposts%2Fpfbid0296rFezVUr8QGctTBD8QdKcdxj3McVFbSs4bvBfrkyetg5Jpi6JdpcCAttD5zymC8l&show_text=true&width=500" width="500" height="728" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">Leer mas</a>
             </article>
             <article class="noticia">
                 <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
