--- a/noticias.html
+++ b/noticias.html
@@ -154,20 +154,20 @@
                 <a href="https://www.facebook.com/share/p/14FKLEbevSc/" target="_blank">Leer mas</a>
             </article>
             <article class="noticia">
-                <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
-                <h3>Titulo de noticia 1 </h3>
+                <img src="Interpoliescoltas.jpg" alt="Noticia 1">
+                <h3>¡Orgullo Politécnico! </h3>
                 <p>
-                    Breve descripcion de la noticia 1. 
+                    Hoy se llevó a cabo el 2.º Concurso Interpolitécnico de Escoltas de Bandera Nacional 2025 
                 </p>
-                <a href="#">Leer mas</a>
+                <a href="https://www.facebook.com/share/p/1CJ6Kb658Q/" target="_blank">Leer mas</a>
             </article>
             <article class="noticia">
-                <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
-                <h3>Titulo de noticia 1 </h3>
+                <img src="Medioambiente.jpg" alt="Noticia 1">
+                <h3>🌱 DÍA MUNDIAL DEL MEDIO AMBIENTE 🌍</h3>
                 <p>
-                    Breve descripcion de la noticia 1. 
+                    En la UPIICSA creemos en una técnica que transforma, no que destruye. 
                 </p>
-                <a href="#">Leer mas</a>
+                <a href="https://www.facebook.com/share/p/1AGmzjAAJW/" target="_blank">Leer mas</a>
             </article>
             <article class="noticia">
                 <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
