--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
       <header class="page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
-          <nav class="rd-navbar rd-navbar-classic"  data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46x" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+          <nav class="rd-navbar rd-navbar-classic"  data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" 
+            data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" 
+            data-xl-stick-up-offset="46x" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+            
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
                 <!-- RD Navbar Panel-->
@@ -118,7 +121,8 @@
                   <!-- RD Navbar boton-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar marcador-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img width="150" height="30" src="images/upiicsa2.jpg" alt="" /><img class="brand-logo-light" src="images/upiicsa.jpg" alt="" width="100" height="100"/></a>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img width="150" height="30" src="images/upiicsa2.jpg" alt="" />
+                    <img class="brand-logo-light" src="images/upiicsa.jpg" alt="" width="100" height="100"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-nav-wrap">
