--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide" data-slide-bg="images/banner3.jpeg">
+            <div class="swiper-slide" data-slide-bg="images/banner3.jpeg" width="50px">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
