--- a/noticias.html
+++ b/noticias.html
@@ -218,6 +218,13 @@
                 <img src="https//via.placeholder.com/200x150" alt="Foto 4">
                 <img src="https//via.placeholder.com/200x150" alt="Foto 5">
                 <!--Añade mas imagenes según sea necesario-->
+          <iframe src="https://www.facebook.com/plugins/page.php?
+    href=https://www.facebook.com/upiicsa.ipn.oficial&
+    tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+    width="500" height="600" style="border:none;overflow:hidden"
+    scrolling="no" frameborder="0" allowfullscreen="true"
+    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+</iframe>
         </div>
     </section>
     <div class="snackbars" id="form-output-global"></div>
