--- a/noticias.html
+++ b/noticias.html
@@ -183,6 +183,20 @@
           allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
         </iframe>
             </article>
+          <article class="noticia">
+                <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
+                <h3>Titulo de noticia 1 </h3>
+                <p>
+                    Breve descripcion de la noticia 1. 
+                </p>
+                <a href="#">Leer mas</a>
+              <iframe 
+          src="https://www.facebook.com/plugins/page.php?href=https://www.facebook.com/upiicsa.ipn.oficial&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true"
+          width="500" height="600" style="border:none;overflow:hidden" 
+          scrolling="no" frameborder="0" allowfullscreen="true"
+          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+        </iframe>
+            </article>
             <!---Añade mas articulos de noticias según sea necesario-->
         </div>
     </section>
