--- a/noticias.html
+++ b/noticias.html
@@ -324,10 +324,11 @@ header nav ul li a:hover{
     background-color: #e8f5f8;
     border: 2px solid #306406;
     border-radius: 10px;
-    width: 550px;
+    width: 540px;
     padding: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
+    justify-content: center;
 }
     
 .noticia:hover{
