--- a/noticias.html
+++ b/noticias.html
@@ -143,7 +143,7 @@
       </header>
      <!--Seccion de Noticias-->
     <section id="noticias">
-        <h2>Ultimas noticias c</h2>
+        <h2>Ultimas noticias. </h2>
         <div class="noticias-container">
             <article class="noticia">
                 <img src="Expoisisa.jpg" alt="Noticia 1">
@@ -174,7 +174,7 @@
                 <iframe src="https://www.facebook.com/plugins/page.php?
     href=https://www.facebook.com/upiicsa.ipn.oficial&
     tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-    width="500" height="450" style="border:none;overflow:hidden"
+    width="500" height="400" style="border:none;overflow:hidden"
     scrolling="no" frameborder="0" allowfullscreen="true"
     allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
                   </iframe>
