--- a/No.1.1.html
+++ b/No.1.1.html
@@ -207,12 +207,13 @@
               <div class="row row-30">
                 <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/IMAGEN2.jpg" alt="" width="340" height="250"/>
                 </div>
+                <div class="box-1">
                   <p>Un proyecto de multimedia no tiene que ser interactivo para llamarse multimedia: los usuarios pueden
                     reclinarse en el asiento y verlo como lo hacen en el cine o frente al televisor. En tales casos un proyecto
                     es lineal, pues empieza y corre hasta el final, cuando se da el control de navegación a los usuarios para
                     que exploren a voluntad el contenido, multimedia se convierte en no lineal e interactivo, y es un puente 
                     personal muy poderoso hacia la información.</p> 
-                
+                </div>
               </div>
             </div>
           </div>
