--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -158,10 +158,9 @@
         <div class="container">
           <div class="row row-50 flex-lg-row-reverse">
             <div class="col-xl-4">
-              <ul class="list-lg">
-                
+              <ul class="list-lg"> 
                 <li>
-                  <p><img  src="images/eduacion3.jpg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
+                  <p><img  src="images/eduacion3.jpg" alt="" class="imagen-animada" width="340" height="250" /></p>
                       <BR>
                       <BR>
                     <p><img class="imagen-hover" src="images/eduacion1.jpg" alt=""  width="340" height="250"/></p>
@@ -170,19 +169,18 @@
             </div>
       <!-- contenido lateral derecho -->
             <div class="col-xl-8">
-              
               <ul class="list-xl">
                 <li>
                   <h1 class="h1fixed"></h1>
                   <p>
                     Las aplicaciones multimedia en la educación han revolucionado la forma en que se imparte y se recibe el conocimiento. Algunos ejemplos incluyen:
-Plataformas de aprendizaje en línea: Como Coursera, Khan Academy y Udemy, que ofrecen cursos interactivos con videos, quizzes y foros de discusión.
-Software educativo: Programas como Duolingo para aprender idiomas o GeoGebra para matemáticas.
-Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios interactivos para facilitar el aprendizaje.</p>
+                    Plataformas de aprendizaje en línea: Como Coursera, Khan Academy y Udemy, que ofrecen cursos interactivos con videos, quizzes y foros de discusión.
+                    Software educativo: Programas como Duolingo para aprender idiomas o GeoGebra para matemáticas.
+                    Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios interactivos para facilitar el aprendizaje.</p>
                   <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. 
                     Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido 
                     interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
-                <p>
+                </p>
                 </li>
               </ul>
             </div>
@@ -194,7 +192,6 @@ Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-xl-8">
-
                         <div class="row row-30">
                             <div class="col-md-6">
                                 <img class="imagen-zoom-rotar" src="images/eduacion2.jpg" alt="" width="340" height="250" />
