--- a/No.1.5.html
+++ b/No.1.5.html
@@ -162,7 +162,6 @@
             <div class="row row-50 flex-lg-row-reverse">
                 <div class="col-xl-4">
                     <ul class="list-lg">
-
                         <li>
                             <p><img src="images/cuidadesdigitales1.jpg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
                             <BR>
@@ -182,7 +181,6 @@
                             <br>
                             <br>
                             <p><img class="imagen-zigzag" src="images/imagenes3.jpg" alt="" width="340" height="250" /></p>
-
                         </li>
                     </ul>
                 </div>
@@ -191,7 +189,6 @@
 
                     <ul class="list-xl">
                         <li>
-                            <h1 class="h1fixed"></h1>
                             <p>
                                 Las ciudades digitales representan la evolución de los centros urbanos tradicionales hacia entornos inteligentes, interconectados y sostenibles mediante el uso intensivo de tecnologías digitales. Este modelo de desarrollo urbano, también conocido como "smart cities", busca optimizar la gestión de recursos, mejorar la calidad de vida de los ciudadanos y promover la sostenibilidad ambiental. El presente ensayo analiza los fundamentos tecnológicos de las ciudades digitales, sus componentes esenciales, beneficios, desafíos y el impacto que están teniendo en la redefinición del concepto de vida urbana en el siglo XXI.                    <br>
                                 <br>
@@ -251,8 +248,6 @@
                                 •	Gestión inteligente del agua (ej. Amsterdam)
                                 <br>
                                 •	Reducción de emisiones mediante movilidad eléctrica
-
-
                             </p>
                         </li>
                     </ul>
@@ -276,15 +271,11 @@
                             <br>
                             <p><img class="imagen-zigzag" src="images/aplicacionvirtual4.jpg" alt="" width="340" height="250"></p>
                         </div>
-                        <div class="col-md-6">
-                            <br>
-                            <br>
-
-                            <p>
+                        <div class="col-md-6">                  
+                          <p>
                                 <h4>3. Casos de Estudio Globales </h4>
                                 <br>
                                 <h5>3.1 Singapur - Ciudad Modelo </h5>
-
                                 •	Sistema de transporte autónomo más avanzado del mundo
                                 <br>
                                 •	Plataforma "Virtual Singapur" (gemelo digital 3D)
@@ -293,7 +284,6 @@
                                 <br>
                                 <br>
                                 <h5>3.2 Barcelona - Innovación Urbana </h5>
-
                                 •	Red de sensores IoT para riego y alumbrado público
                                 <br>
                                 •	Plataforma "Sentilo" para gestión de datos urbanos
@@ -302,14 +292,12 @@
                                 <br>
                                 <br>
                                 <h5>3.3 Tokio - Preparación para 2025 </h5>
-
                                 •	Sistema de respuesta integrado a desastres naturales
                                 <br>
                                 •	Infraestructura para Juegos Olímpicos inteligentes
                                 <br>
                                 •	Red de energía resiliente con microrredes locales
                             </p>
-
                             <p>
                                 <h4>4. Desafíos y Riesgos </h4>
                                 <br>
@@ -330,25 +318,21 @@
                                 •	Resistencia al cambio en burocracias tradicionales
                                 <br><br>
                                 <h5>4.3 Retos Económicos </h5>
-
                                 •	Altos costos iniciales de implementación
                                 <br>
                                 •	Modelos de financiamiento sostenible
                                 <br>
                                 •	Rentabilidad a largo plazo de las inversiones
-
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="container">
             <div class="row row-50 flex-lg-row-reverse">
                 <div class="col-xl-4">
                     <ul class="list-lg">
-
                         <li>
                             <p><img src="images/aplicacionvirtual5.png" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
                             <BR>
@@ -356,22 +340,20 @@
                             <BR>
                             <BR>
                             <p><img class="imagen-zigzag" src="images/aplicacionvirtual6.jpg" alt="" width="340" height="250" /></p>
-
                         </li>
                     </ul>
                 </div>
-
                 <!-- contenido lateral derecho -->
                 <div class="col-xl-8">
 
                     <ul class="list-xl">
                         <li>
                             <h1 class="h1fixed"></h1>
-                            <p>
+                            
                                 <h4>5. Futuro y Tendencias Emergentes </h4>
                                 <br>
                                 <h5>5.1 Gemelos Digitales Urbanos </h5>
-
+                                <p>
                                 Réplicas virtuales completas de ciudades para simulación y planificación (ej. proyecto "Metaverse Seoul")
                                 <br>
                                 <br>
@@ -387,18 +369,13 @@
 
                                 Plataformas para compartir recursos y optimizar el uso de activos urbanos
                                 <br>
-                                Las ciudades digitales representan un paradigma transformador en la organización del espacio urbano, ofreciendo soluciones innovadoras a los complejos desafíos que enfrentan las metrópolis modernas. Si bien presentan retos significativos en términos tecnológicos, económicos y sociales, su potencial para crear entornos urbanos más eficientes, sostenibles y humanos es innegable. El éxito de esta transición dependerá de la capacidad para desarrollar modelos inclusivos que prioricen el bienestar ciudadano sobre la mera tecnificación, asegurando que la revolución digital urbana beneficie a todos los segmentos de la población.
-
-                                <br>
-                                <br>
-                            <p>
-
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-
+                                Las ciudades digitales representan un paradigma transformador en la organización 
+                                  del espacio urbano, ofreciendo soluciones innovadoras a los complejos desafíos 
+                                  que enfrentan las metrópolis modernas. Si bien presentan retos significativos en 
+                                  términos tecnológicos, económicos y sociales, su potencial para crear entornos urbanos 
+                                  más eficientes, sostenibles y humanos es innegable. El éxito de esta transición dependerá 
+                                  de la capacidad para desarrollar modelos inclusivos que prioricen el bienestar ciudadano sobre
+                                  la mera tecnificación, asegurando que la revolución digital urbana beneficie a todos los segmentos de la población.
                             </p>
                         </li>
                     </ul>
