--- a/No.1.1.1.html
+++ b/No.1.1.1.html
@@ -15,8 +15,13 @@
   
   <body>
     <style>
-      body{
-      }
+      
+        body {
+  background-color: #f4f6f9;
+  font-family: 'Poppins', sans-serif;
+  color: #333333;
+}
+      
       @keyframes mover {
           0% { transform: translateX(0); }
           50% { transform: translateX(20px); } /* Se mueve a la derecha */
