--- a/No.1.1.3.html
+++ b/No.1.1.3.html
@@ -14,6 +14,11 @@
   </head>
   <body>
       <style>
+        body {
+  background-color: #f4f6f9;
+  font-family: 'Poppins', sans-serif;
+  color: #333333;
+}
           @keyframes mover {
               0% {
                   transform: translateX(0);
