--- a/No.1.2.1.html
+++ b/No.1.2.1.html
@@ -95,7 +95,7 @@
                                         <a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                                     </li>
                                     <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="index.html">NOTICIAS</a>
+                                        <a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                                     </li>
                                     <li class="rd-nav-item">
                                         <a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
