--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -87,7 +87,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">NOTICIAS</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
                     </li>
