--- a/No.1.1.html
+++ b/No.1.1.html
@@ -271,7 +271,6 @@
                   <h5>Ejemplos: </h5>Plataformas de e-learning como Khan Academy, Coursera, Duolingo.
                   <h5>Usos: </h5>Formación en línea, cursos interactivos, simuladores educativos.
                   </p>
-                  <br>
                   <p>
                   <h4>2. Aplicaciones multimedia de entretenimiento</h4>
                   Son aquellas que se centran en el ocio y el disfrute del usuario, como videojuegos, 
@@ -294,7 +293,7 @@
                   <h5>Usos:</h5> Creación de contenido visual, diseño gráfico, edición de video y audio.
                   </p>
                    <p>
-                  <h4>4. Aplicaciones multimedia de comunicación</h4>
+                  <h4>5. Aplicaciones multimedia de comunicación</h4>
                   Son herramientas que permiten la comunicación entre usuarios utilizando múltiples tipos de 
                     medios. Esto incluye mensajería, videoconferencias, y redes sociales.
                   <h5>Ejemplos:</h5> WhatsApp, Zoom, Facebook, Instagram
@@ -309,6 +308,44 @@
             </div>
           </div>
           </div>
+       <!--contenido con imagen lateral izquierdo -->
+          <div class="container">
+          <div class="row">
+            <div class="col-lg-10 col-xl-8">
+              <div class="row row-30">
+                <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/IMAGEN2.jpg" alt="" width="400" height="300"/>
+                </div>
+                <div class="col-md-6">
+                  <p>
+                    <h4>6. Aplicaciones multimedia para publicidad y marketing</h4>
+                    Se utilizan para crear experiencias visuales y sonoras que promuevan productos, servicios o marcas de forma atractiva y efectiva.
+                    <h5>Ejemplos:</h5> Aplicaciones de realidad virtual (VR) para probar productos, campañas publicitarias interactivas en línea.
+                    <h5>Usos:</h5> Publicidad interactiva, promoción de productos, campañas de marketing digital.
+                  </p> 
+                  <p>
+                  <h4>7. Aplicaciones multimedia de simulación</h4>
+                  Son aplicaciones que crean entornos virtuales donde los usuarios pueden interactuar de manera realista con objetos, personas o situaciones simuladas.
+                  <h5>Ejemplos:</h5> Simuladores de vuelo, Simuladores de conducción (como Microsoft Flight Simulator, Gran Turismo).
+                  <h5>Usos:</h5> Entrenamiento profesional, simulación de situaciones peligrosas o complejas, educación práctica.
+                </p>
+                  <p>
+                    <h4>8. Aplicaciones multimedia de arte y creatividad</h4>
+                    Estas aplicaciones están orientadas a la creación artística y creativa, ofreciendo herramientas para la creación de obras visuales, sonoras o interactivas.
+                    <h5>Ejemplos:</h5> Procreate (para ilustración digital), GarageBand (para música), Unity (para crear experiencias interactivas).                                
+                    <h5>Usos:</h5> Arte digital, producción musical, creación de experiencias interactivas.
+                  </p>
+                  <p>
+                    <h4>9. Aplicaciones multimedia de salud</h4>
+                    Son herramientas diseñadas para la educación o el seguimiento de la salud, utilizando multimedia para proporcionar información de manera accesible.
+                    <h5>Ejemplos:</h5> Aplicaciones de seguimiento de salud como MyFitnessPal, aplicaciones de telemedicina como Teladoc.
+                    <h5>Usos:</h5> Educación en salud, seguimiento de ejercicios, consultas médicas a distancia.
+
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
        
        <div class="nav-buttons">
       <!--<a href="No.2.1.4.html"><button class="nav-btn">← Tema anterior</button></a>-->
