--- a/No.1.3.html
+++ b/No.1.3.html
@@ -182,6 +182,11 @@
                             <br>
                             <br>
                             <p><img class="imagen-hover" src="images/play1.png" alt="" width="340" height="250" /></p>
+                            <br> 
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class=imagen-animada" src="images/videojuegos.gif" alt="" width="340" height="250" /></p>
 
                         </li>
                     </ul>
