--- a/No.1.3.html
+++ b/No.1.3.html
@@ -186,7 +186,7 @@
                             <br>
                             <br>
                             <br>
-                            <p><img class=imagen-animada" src="images/videojuegos.gif" alt="" width="340" height="250" /></p>
+                            <p><img class="imagen-animada" src="images/videojuegos.gif" alt="" width="340" height="250" /></p>
 
                         </li>
                     </ul>
